maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:20: error: ':' expected but ',' found.
def tagCaseAdj(x,y):Unit = {
                ^ShortestPathMaze:41: error: identifier expected but '}' found.
}
^